# CPP05

./: .gitignore  CMakeLists.txt
ex00/: Makefile
ex00/include/: Bureaucrat.hpp
ex00/includes/: Bureaucrat.hpp
ex00/src/: Bureaucrat.cpp  main.cpp
ex00/srcs/: Bureaucrat.cpp  main.cpp
ex00/tests/: test.cpp
ex01/: CMakeLists.txt  Makefile
ex01/include/: Bureaucrat.hpp  Form.hpp
ex01/includes/: Bureaucrat.hpp  Form.hpp
ex01/src/: Bureaucrat.cpp  Form.cpp  main.cpp
ex01/srcs/: Bureaucrat.cpp  Form.cpp
ex02/: CMakeLists.txt  Makefile
ex02/.cache/clangd/index/: ShrubberyCreationForm.cpp.A1E3E1A14AD0DAD8.idx
ex02/include/: AForm.hpp  Bureaucrat.hpp  Form.hpp  PresidentialPardonForm.hpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.hpp
ex02/src/: AForm.cpp  Bureaucrat.cpp  Form.cpp  PresidentialPardonForm.cpp  RobotomyRequestForm.cpp  ShrubberyCreationForm.cpp  main.cpp
ex03/: Makefile  home_shrubbery
ex03/include/: Bureaucrat.hpp  Intern.hpp  PresidentialPardonForm.hpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.hpp
ex03/src/: Bureaucrat.cpp  Form.cpp  Intern.cpp  PresidentialPardonForm.cpp  RobotomyRequestForm.cpp  ShrubberyCreationForm.cpp  main.cpp
tests/: test.cpp
